<?xml version="1.0"?>
<package>
	<name>ir_drivers</name>
	<version>0.0.1</version>
	<description>
		ir drivers third party code for Maggie robot
	</description>


	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<maintainer email="social.robots@uc3m.es">Social Robots</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<license>Binary Only</license>


	<buildtool_depend>cmake</buildtool_depend>
	<run_depend>catkin</run_depend>


	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<build_type>cmake</build_type>
	</export>
</package>
