<?xml version="1.0"?>
<package>
    <name>ir_trans_drivers</name>
    <version>0.0.4</version>
    <description>
        irtrans drivers third party code for Maggie robot
    </description>

    <maintainer email="social.robots@uc3m.es">Social Robots</maintainer>
    
    <license>Binary Only</license>

    <buildtool_depend>cmake</buildtool_depend>
    <run_depend>catkin</run_depend>

    <export>
        <build_type>cmake</build_type>
    </export>
</package>
